Bug 1519058 - Some bookmark favicons disappear after clearing history. r=Standard8 a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D19154

--HG--
extra : source : c2784634bafabee48fcd70e22570568391c7187a