toolkit/components/places/tests/favicons/test_root_icons.js
@@ -44,15 +44,27 @@ add_task(async function() {
 });
 
 add_task(async function test_removePagesByTimeframe() {
+  const BASE_URL = "http://www.places.test";
   // Add a visit in the past with no directly associated icon.
-  await PlacesTestUtils.addVisits({uri: "http://www.places.test/old/", visitDate: new Date(Date.now() - 86400000)});
-  let pageURI = NetUtil.newURI("http://www.places.test/page/");
-  await PlacesTestUtils.addVisits({uri: pageURI, visitDate: new Date(Date.now() - 7200000)});
-  let faviconURI = NetUtil.newURI("http://www.places.test/page/favicon.ico");
-  let rootIconURI = NetUtil.newURI("http://www.places.test/favicon.ico");
+  let oldPageURI = NetUtil.newURI(`${BASE_URL}/old/`);
+  await PlacesTestUtils.addVisits({
+    uri: oldPageURI,
+    visitDate: new Date(Date.now() - 86400000),
+  });
+  // And another more recent visit.
+  let pageURI = NetUtil.newURI(`${BASE_URL}/page/`);
+  await PlacesTestUtils.addVisits({
+    uri: pageURI,
+    visitDate: new Date(Date.now() - 7200000),
+  });
+
+  // Add a normal icon to the most recent page.
+  let faviconURI = NetUtil.newURI(`${BASE_URL}/page/favicon.ico`);
   PlacesUtils.favicons.replaceFaviconDataFromDataURL(
     faviconURI, SMALLSVG_DATA_URI.spec, 0, systemPrincipal);
   await setFaviconForPage(pageURI, faviconURI);
+  // Add a root icon to the most recent page.
+  let rootIconURI = NetUtil.newURI(`${BASE_URL}/favicon.ico`);
   PlacesUtils.favicons.replaceFaviconDataFromDataURL(
     rootIconURI, SMALLPNG_DATA_URI.spec, 0, systemPrincipal);
   await setFaviconForPage(pageURI, rootIconURI);
@@ -62,16 +74,16 @@ add_task(async function test_removePagesByTimeframe() {
                faviconURI.spec, "Should get the biggest icon");
   Assert.equal(await getFaviconUrlForPage(pageURI, 1),
                rootIconURI.spec, "Should get the smallest icon");
-  Assert.equal(await getFaviconUrlForPage("http://www.places.test/old/"),
+  Assert.equal(await getFaviconUrlForPage(oldPageURI),
                rootIconURI.spec, "Should get the root icon");
 
+  info("Removing the newer page, not the old one");
   await PlacesUtils.history.removeByFilter({
     beginDate: new Date(Date.now() - 14400000),
     endDate: new Date(),
   });
-
-  // Check database entries.
   await PlacesTestUtils.promiseAsyncUpdates();
+
   let db = await PlacesUtils.promiseDBConnection();
   let rows = await db.execute("SELECT * FROM moz_icons");
   Assert.equal(rows.length, 1, "There should only be 1 icon entry");
@@ -127,4 +139,46 @@ add_task(async function test_same_size() {
 
   Assert.equal(await getFaviconUrlForPage(pageURI, 20),
                faviconURI.spec, "Should get the non-root icon");
+});
+
+add_task(async function test_root_on_different_host() {
+  async function getRootValue(url) {
+    let db = await PlacesUtils.promiseDBConnection();
+    let rows = await db.execute("SELECT root FROM moz_icons WHERE icon_url = :url",
+                                {url});
+    return rows[0].getResultByName("root");
+  }
+
+  // Check that a root icon associated to 2 domains is not removed when the
+  // root domain is removed.
+  const TEST_URL1 = "http://places1.test/page/";
+  let pageURI1 = NetUtil.newURI(TEST_URL1);
+  await PlacesTestUtils.addVisits(pageURI1);
+
+  const TEST_URL2 = "http://places2.test/page/";
+  let pageURI2 = NetUtil.newURI(TEST_URL2);
+  await PlacesTestUtils.addVisits(pageURI2);
+
+  // Root favicon for TEST_URL1.
+  const ICON_URL = "http://places1.test/favicon.ico";
+  let iconURI = NetUtil.newURI(ICON_URL);
+  PlacesUtils.favicons.replaceFaviconDataFromDataURL(
+    iconURI, SMALLPNG_DATA_URI.spec, 0, systemPrincipal);
+  await setFaviconForPage(pageURI1, iconURI);
+  Assert.equal(await getRootValue(ICON_URL), 1, "Check root == 1");
+  Assert.equal(await getFaviconUrlForPage(pageURI1, 16),
+               ICON_URL, "The icon should been found");
+
+  // Same favicon for TEST_URL2.
+  PlacesUtils.favicons.replaceFaviconDataFromDataURL(
+    iconURI, SMALLPNG_DATA_URI.spec, 0, systemPrincipal);
+  await setFaviconForPage(pageURI2, iconURI);
+  Assert.equal(await getRootValue(ICON_URL), 1, "Check root == 1");
+  Assert.equal(await getFaviconUrlForPage(pageURI2, 16),
+               ICON_URL, "The icon should be found");
+
+  await PlacesUtils.history.remove(pageURI1);
+
+  Assert.equal(await getFaviconUrlForPage(pageURI2, 16),
+               ICON_URL, "The icon should not have been removed");
 });
